--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ classifiers =
 py_modules = dis_cli
 install_requires =
     click>=7
+    rich>=6
 python_requires = >=3.6
 
 [options.entry_points]
