refactor into functions... not as isolated as they could be, but progress

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,5 +34,16 @@ console_scripts =
 tests =
     pytest>=6
 
+[mypy]
+files = un_fstring.py, tests/*.py
+pretty = true
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+
+[mypy-tests.*]
+disallow_untyped_defs = false
+
 [bdist_wheel]
 universal = True
