--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
       - id: check-case-conflict
       - id: forbid-new-submodules
   - repo: https://github.com/psf/black
-    rev: 19.10b0
+    rev: 20.8b1
     hooks:
       - id: black
   - repo: https://github.com/asottile/setup-cfg-fmt
@@ -31,6 +31,10 @@ repos:
     hooks:
       - id: seed-isort-config
   - repo: https://github.com/timothycrosley/isort
-    rev: 5.4.2
+    rev: 5.5.2
     hooks:
       - id: isort
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v0.782
+#    hooks:
+#      - id: mypy
