fix mypy settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ tests =
     pytest>=6
 
 [mypy]
-files = un_fstring.py, tests/*.py
+files = dis_cli.py, tests/*.py
 pretty = true
 check_untyped_defs = true
 disallow_incomplete_defs = true
