--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,14 @@ version = 0.1.2
 description = A tool to inspect disassembled Python code on the command line.
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://github.com/JoshKarpel/dis-cli
 author = Josh Karpel
 author_email = josh.karpel@gmail.com
 license = MIT
 license_file = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
+    Environment :: Console
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
@@ -18,6 +20,9 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Topic :: Software Development
+    Topic :: Software Development :: Disassemblers
+    Topic :: Utilities
 
 [options]
 py_modules = dis_cli
