--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,8 @@ py_modules = dis_cli
 install_requires =
     click>=7
     rich>=7
+    importlib-metadata;python_version<"3.8"
+    importlib-resources;python_version<"3.7"
 python_requires = >=3.6
 
 [options.entry_points]
