--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dis_cli
-version = 0.1.3
+version = 0.1.4
 description = A tool to inspect disassembled Python code on the command line.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -41,6 +41,7 @@ console_scripts =
 [options.extras_require]
 tests =
     pytest>=6
+    pytest-cov==2.10.1
 
 [mypy]
 files = dis_cli.py, tests/*.py
