--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,8 @@ include = "\\.pyi?$"
 
 [tool.isort]
 known_third_party = ["click", "pytest", "rich", "setuptools"]
+profile = "black"
 line_length = 100
-multi_line_output = "VERTICAL_HANGING_INDENT"
-include_trailing_comma = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
