--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,10 @@ jobs:
 
     runs-on: ${{ matrix.platform }}
 
+    env:
+      PLATFORM: ${{ matrix.platform }}
+      PYTHON_VERSION: ${{ matrix.python-version }}
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -25,4 +29,9 @@ jobs:
     - name: Install package
       run: pip install .[tests]
     - name: Run tests
-      run: pytest tests/
+      run: pytest --cov --cov-report=xml tests/
+    - uses: codecov/codecov-action@v1
+      with:
+        env_vars: PLATFORM,PYTHON_VERSION
+        fail_ci_if_error: true
+        verbose: true
