--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dis_cli
-version = 0.1.4
+version = 0.1.5
 description = A tool to inspect disassembled Python code on the command line.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -42,7 +42,7 @@ console_scripts =
 [options.extras_require]
 tests =
     pytest>=6
-    pytest-cov==2.10.1
+    pytest-cov>=2.10
 
 [mypy]
 files = dis_cli.py, tests/*.py
