--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,16 @@ repos:
     rev: v1.1.9
     hooks:
       - id: remove-crlf
+  - repo: https://github.com/asottile/blacken-docs
+    rev: v1.8.0
+    hooks:
+      - id: blacken-docs
+        additional_dependencies: [ black==20.8b1 ]
+  - repo: https://github.com/hadialqattan/pycln
+    rev: 0.0.1-alpha.3
+    hooks:
+      - id: pycln
+        args: [ --config=pyproject.toml ]
   - repo: https://github.com/psf/black
     rev: 20.8b1
     hooks:
