--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers =
     Development Status :: 3 - Alpha
     Environment :: Console
     Intended Audience :: Developers
+    Intended Audience :: Education
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
@@ -50,9 +51,7 @@ check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
 no_implicit_optional = true
-
-[mypy-tests.*]
-disallow_untyped_defs = false
+ignore_missing_imports = true
 
 [bdist_wheel]
 universal = True
