--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ console_scripts =
 
 [options.extras_require]
 tests =
+    mypy>=0.790
     pytest>=6
     pytest-cov>=2.10
     importlib-metadata;python_version<"3.8"
@@ -52,6 +53,9 @@ disallow_incomplete_defs = true
 disallow_untyped_defs = true
 no_implicit_optional = true
 ignore_missing_imports = true
+
+[mypy-rich.*]
+no_implicit_optional = False
 
 [bdist_wheel]
 universal = True
