--- a/setup.cfg
+++ b/setup.cfg
@@ -55,7 +55,7 @@ no_implicit_optional = true
 ignore_missing_imports = true
 
 [mypy-rich.*]
-no_implicit_optional = False
+no_implicit_optional = false
 
 [bdist_wheel]
-universal = True
+universal = true
