--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers =
     Development Status :: 3 - Alpha
     Environment :: Console
     Intended Audience :: Developers
+    Intended Audience :: Education
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
@@ -39,10 +40,10 @@ console_scripts =
 
 [options.extras_require]
 tests =
+    mypy>=0.790
     pytest>=6
     pytest-cov>=2.10
     importlib-metadata;python_version<"3.8"
-    importlib-resources;python_version<"3.7"
 
 [mypy]
 files = dis_cli.py, tests/*.py
@@ -51,9 +52,10 @@ check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
 no_implicit_optional = true
+ignore_missing_imports = true
 
-[mypy-tests.*]
-disallow_untyped_defs = false
+[mypy-rich.*]
+no_implicit_optional = false
 
 [bdist_wheel]
-universal = True
+universal = true
