--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest, ubuntu-20.04, ubuntu-18.04]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     runs-on: ${{ matrix.platform }}
 
@@ -30,10 +30,10 @@ jobs:
       run: pip install .[tests]
     - name: Run tests
       run: pytest --cov --cov-report=xml tests/
+    - name: Run mypy
+      run: mypy .
     - uses: codecov/codecov-action@v1
       with:
         env_vars: PLATFORM,PYTHON_VERSION
         fail_ci_if_error: true
         verbose: true
-    - name: Run mypy
-      run: mypy .
