--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ profile = "black"
 line_length = 100
 
 [tool.pytest.ini_options]
+addopts = ['--strict-markers', '--mypy']
 testpaths = ["tests"]
 console_output_style = "count"
