--- a/setup.cfg
+++ b/setup.cfg
@@ -40,14 +40,15 @@ console_scripts =
 
 [options.extras_require]
 tests =
-    mypy>=0.790
+    mypy>=0.812
     pytest>=6
     pytest-cov>=2.10
+    pytest-mypy>=0.8.1
     importlib-metadata;python_version<"3.8"
 
 [mypy]
 files = dis_cli.py, tests/*.py
-pretty = true
+pretty = false
 check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
