--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Run tests
       run: pytest --cov --cov-report=xml tests/
     - name: Run mypy
-      run: mypy .
+      run: mypy
     - uses: codecov/codecov-action@v2.1.0
       with:
         env_vars: PLATFORM,PYTHON_VERSION
