--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install package
       run: pip install .[tests]
     - name: Run tests
-      run: pytest --cov --cov-report=xml tests/
+      run: pytest --cov --cov-report=xml
     - name: Run mypy
       run: mypy
     - uses: codecov/codecov-action@v2.1.0
