--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     runs-on: ${{ matrix.platform }}
 
@@ -29,7 +29,7 @@ jobs:
     - name: Install package
       run: pip install .[tests]
     - name: Run tests
-      run: pytest --cov --cov-report=xml tests/
+      run: pytest --cov --cov-report=xml
     - name: Run mypy
       run: mypy
     - uses: codecov/codecov-action@v2.1.0
