--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dis_cli
-version = 0.3.0
+version = 0.4.0
 description = A tool to inspect disassembled Python code on the command line.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -26,8 +26,8 @@ classifiers =
 py_modules = dis_cli
 install_requires =
     click>=8
-    rich>=12
-python_requires = >=3.7
+    rich>=13
+python_requires = >=3.8
 
 [options.entry_points]
 console_scripts =
@@ -35,16 +35,14 @@ console_scripts =
 
 [options.extras_require]
 tests =
-    mypy>=0.942
-    pytest>=7.1
+    mypy>=1
+    pytest>=7
     pytest-cov>=3
-    pytest-mypy>=0.9
     types-click>=7
-    importlib-metadata;python_version<"3.8"
 
 [mypy]
-files = dis_cli.py, tests/*.py
-pretty = false
+files = .
+pretty = true
 check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
