--- a/.coveragerc
+++ b/.coveragerc
@@ -3,10 +3,14 @@
 branch = True
 
 source =
-    dis_cli
+    dis_cli/
     tests/
 
 [report]
+
+skip_empty = True
+show_missing = True
+sort = -cover
 
 exclude_lines =
     def __repr__
@@ -18,3 +22,10 @@ exclude_lines =
     if 0:
     if False:
     if __name__ == .__main__.:
+    if TYPE_CHECKING:
+    @overload
+    assert False
+
+    pragma: unreachable
+    pragma: debugging
+    pragma: never runs
