--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -3,37 +3,50 @@ name: quality-check
 on:
   push:
     branches:
-    - master
+      - main
   pull_request:
 
 jobs:
-  test:
+  test-code:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
-
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.10", "3.11"]
+    defaults:
+      run:
+        shell: bash
     runs-on: ${{ matrix.platform }}
-
+    timeout-minutes: 15
     env:
       PLATFORM: ${{ matrix.platform }}
       PYTHON_VERSION: ${{ matrix.python-version }}
-
+      PYTHONUTF8: 1  # https://peps.python.org/pep-0540/
+      COLORTERM: truecolor
+      PIP_DISABLE_PIP_VERSION_CHECK: 1
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install package
-      run: pip install .[tests]
-    - name: Run tests
-      run: pytest --cov --cov-report=xml
-    - name: Run mypy
-      run: mypy
-    - uses: codecov/codecov-action@v3.1.3
-      with:
-        env_vars: PLATFORM,PYTHON_VERSION
-        fail_ci_if_error: true
-        verbose: true
+      - name: Check out repository
+        uses: actions/checkout@v3.5.2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4.6.0
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.3.3
+      - name: Install Package
+        run: poetry install
+      - name: Run pre-commit checks
+        run: poetry run pre-commit run --all-files --show-diff-on-failure --color=always
+      - name: Make sure we can build the package
+        run: poetry build -vvv
+      - name: Test types
+        run: poetry run mypy
+      - name: Test code
+        run: poetry run pytest -v --cov --cov-report=xml --durations=20
+      - name: Test docs
+        run: poetry run mkdocs build --clean --strict --verbose
+      - name: Upload coverage
+        uses: codecov/codecov-action@v3.1.3
+        with:
+          env_vars: PLATFORM,PYTHON_VERSION
+          fail_ci_if_error: false
