--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,12 +11,13 @@ repos:
       - id: check-docstring-first
       - id: check-merge-conflict
       - id: check-toml
-      - id: check-yaml
+      - id: check-json
       - id: debug-statements
       - id: end-of-file-fixer
       - id: forbid-new-submodules
       - id: mixed-line-ending
       - id: trailing-whitespace
+        exclude_types: [svg]
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
@@ -24,19 +25,19 @@ repos:
       - id: python-no-eval
       - id: python-no-log-warn
       - id: python-use-type-annotations
-  - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.5.1
+      - id: python-check-blanket-type-ignore
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.23.0
     hooks:
-      - id: remove-crlf
+      - id: check-github-workflows
+      - id: check-github-actions
+      - id: check-dependabot
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.0.264'
+    hooks:
+      - id: ruff
+        args: [ --fix, --exit-non-zero-on-fix ]
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
       - id: black
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.2.0
-    hooks:
-      - id: setup-cfg-fmt
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
